Change file struture and add test package
  Most of it was done to test the building and to give an idea of how to
  further expand the project.

--- a/.gitignore
+++ b/.gitignore
@@ -4,5 +4,13 @@
 # Ignore Gradle build output directory
 build
 
-# Ignore any gradle specific file from the gradle init command
+# Ignore gradle specific file from the gradle init command
 *gradle*
+
+# Ignore Eclipse specific files
+*eclipse*
+.project
+.classpath
+
+# Build artifacts
+*.class
