Adds demo for stable orbit

--- a/app/config/settings.properties
+++ b/app/config/settings.properties
@@ -1,5 +1,5 @@
 #Simulation settings
-#Fri Nov 01 10:44:03 EDT 2024
+#Fri Nov 01 11:03:47 EDT 2024
 Camera\ Settings=0.0
 Sensitivity=0.4
-Texture\ Quality=91.66666666666667
+Texture\ Quality=275.0
