--- a/app/config/settings.properties
+++ b/app/config/settings.properties
@@ -1,5 +1,5 @@
 #Simulation settings
-#Fri Nov 01 11:03:47 EDT 2024
+#Sat Nov 09 19:29:12 EST 2024
 Camera\ Settings=0.0
-Sensitivity=0.4
+Sensitivity=0.1
 Texture\ Quality=275.0
