--- a/app/config/settings.properties
+++ b/app/config/settings.properties
@@ -1,5 +1,5 @@
 #Simulation settings
-#Fri Nov 15 11:36:06 EST 2024
+#Fri Nov 15 15:51:49 EST 2024
 Camera\ Settings=0.0
 Sensitivity=0.1
-Texture\ Quality=275.0
+Texture\ Quality=91.66666666666667
