--- a/app/config/settings.properties
+++ b/app/config/settings.properties
@@ -1,5 +1,5 @@
 #Simulation settings
-#Sun Nov 17 00:25:19 EST 2024
+#Fri Nov 29 16:01:43 EST 2024
 Camera\ Settings=0.0
 Sensitivity=0.1
-Texture\ Quality=275.0
+Texture\ Quality=1.7976931348623157E308
