Fix formatting on body parameters

--- a/app/config/settings.properties
+++ b/app/config/settings.properties
@@ -1,3 +1,5 @@
+#Simulation settings
+#Fri Nov 29 17:05:17 EST 2024
 Camera\ Settings=0.0
 Sensitivity=0.1
-Texture\ Quality=1.7976931348623157E308
+Texture\ Quality=275.0
